--- a/index.html
+++ b/index.html
@@ -60,19 +60,38 @@
       input:focus {
         border-color: #007aff;
       }
-      button {
-        background: #007aff;
-        color: white;
-        cursor: pointer;
-        border: none;
+      .button {
+        padding: 12px;
+        border-radius: 8px;
         font-size: 16px;
         font-weight: 500;
-        margin-top: 12px;
         transition: background 0.3s ease, transform 0.2s ease;
+        cursor: pointer;
+        width: 48%; /* Adjust for even spacing */
       }
-      button:hover {
-        background: #005bb5;
+      .button.is-primary {
+        background-color: #007aff;
+        color: white;
+        border: none;
+      }
+      .button.is-primary:hover {
+        background-color: #005bb5;
         transform: translateY(-2px);
+      }
+      .button.is-danger {
+        background-color: #ff4d4d;
+        color: white;
+        border: none;
+      }
+      .button.is-danger:hover {
+        background-color: #d40000;
+        transform: translateY(-2px);
+      }
+      .button-container {
+        display: flex;
+        justify-content: space-between;
+        gap: 8px;
+        margin-top: 12px;
       }
       #message {
         margin-top: 20px;
@@ -89,7 +108,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Form Peminjaman Inventaris Lab Elektro</h1>
+      <h1>Peminjaman Inventaris Lab Elektro</h1>
       <form id="form" method="POST">
         <div class="field">
           <label class="label">Nama Peminjam</label>
@@ -103,7 +122,7 @@
         </div>
 
         <div class="field">
-          <label class="label">Jumlah Variasi Barang yang Dipinjam</label>
+          <label class="label">Jumlah Variasi Barang</label>
           <input
             class="input"
             type="number"
@@ -136,7 +155,7 @@
           />
         </div>
 
-        <div class="field is-grouped">
+        <div class="button-container">
           <button class="button is-primary" type="submit" id="submit-button">
             Submit
           </button>
