--- a/index.html
+++ b/index.html
@@ -16,90 +16,76 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: #f9f9f9;
-        color: #333;
+        background-color: #f5f5f5;
+        color: #4a4a4a;
         margin: 0;
       }
-      .container {
+      .container-box {
         background: #ffffff;
-        padding: 40px;
-        border-radius: 12px;
-        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-        max-width: 500px;
+        padding: 2rem;
+        border-radius: 10px;
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+        max-width: 600px;
         width: 100%;
-        transition: transform 0.3s ease;
+        transition: transform 0.2s ease;
       }
-      .container:hover {
-        transform: scale(1.01);
+      .container-box:hover {
+        transform: scale(1.02);
       }
       h1 {
-        font-size: 25px;
-        color: #333;
-        font-weight: 600;
+        font-size: 1.5rem;
+        color: #333333;
+        font-weight: 700;
         text-align: center;
-        margin-bottom: 24px;
+        margin-bottom: 1.5rem;
       }
-      label {
-        font-size: 16px;
-        color: #666;
-        display: block;
-        margin-bottom: 8px;
+      .label {
+        font-size: 0.9rem;
+        color: #4a4a4a;
+        font-weight: 600;
+        margin-bottom: 0.5rem;
       }
-      input,
-      button {
-        width: 100%;
-        padding: 12px;
-        margin: 8px 0 16px;
-        border-radius: 8px;
-        border: 1px solid #ddd;
-        font-size: 15px;
-        color: #333;
-        outline: none;
-        transition: border-color 0.3s ease;
-      }
-      input:focus {
-        border-color: #007aff;
-      }
+      .input,
       .button {
-        padding: 12px;
-        border-radius: 8px;
-        font-size: 16px;
-        font-weight: 500;
-        transition: background 0.3s ease, transform 0.2s ease;
-        cursor: pointer;
-        width: 48%; /* Adjust for even spacing */
+        border-radius: 5px;
+        font-size: 0.9rem;
+        transition: all 0.3s ease;
       }
-      .button.is-primary {
-        background-color: #007aff;
-        color: white;
-        border: none;
-      }
-      .button.is-primary:hover {
-        background-color: #005bb5;
-        transform: translateY(-2px);
-      }
-      .button.is-danger {
-        background-color: #ff4d4d;
-        color: white;
-        border: none;
-      }
-      .button.is-danger:hover {
-        background-color: #d40000;
-        transform: translateY(-2px);
+      .input:focus {
+        border-color: #3273dc;
+        box-shadow: 0 0 0 2px rgba(50, 115, 220, 0.25);
       }
       .button-container {
         display: flex;
         justify-content: space-between;
-        gap: 8px;
-        margin-top: 12px;
+        gap: 10px;
+        margin-top: 1rem;
+      }
+      .button.is-primary {
+        background-color: #3273dc;
+        color: #ffffff;
+        border: none;
+      }
+      .button.is-primary:hover {
+        background-color: #275aa8;
+        transform: translateY(-2px);
+      }
+      .button.is-danger {
+        background-color: #ff3860;
+        color: #ffffff;
+        border: none;
+      }
+      .button.is-danger:hover {
+        background-color: #d91640;
+        transform: translateY(-2px);
       }
       #message {
-        margin-top: 20px;
+        margin-top: 1rem;
         font-weight: bold;
         color: green;
-        padding: 8px;
+        padding: 0.5rem;
         background-color: #e6ffed;
-        border-radius: 4px;
+        border-radius: 5px;
         border: 1px solid #c3e6cb;
         display: none;
         text-align: center;
@@ -107,7 +93,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="container-box">
       <h1>Peminjaman Inventaris Lab Elektro</h1>
       <form id="form" method="POST">
         <div class="field">
